// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> Validation states should render the correct snapshots 1`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <input
        aria-controls="input-2"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-input is-warning"
        id="input-2"
        onClick={[Function]}
        onKeyPress={[Function]}
        placeholder="Field placeholder text"
        role="button"
        tabIndex={0}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<FormInput /> Validation states should render the correct snapshots 2`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <input
        aria-controls="input-3"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-input is-invalid"
        id="input-3"
        onClick={[Function]}
        onKeyPress={[Function]}
        placeholder="Field placeholder text"
        role="button"
        tabIndex={0}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<FormInput /> Validation states should render the correct snapshots 3`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <input
        aria-controls="input-4"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-input is-valid"
        id="input-4"
        onClick={[Function]}
        onKeyPress={[Function]}
        placeholder="Field placeholder text"
        role="button"
        tabIndex={0}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<FormInput /> Validation states should render the correct snapshots 4`] = `
<div
  className="fd-popover"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <input
        aria-controls="input-5"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-input is-information"
        id="input-5"
        onClick={[Function]}
        onKeyPress={[Function]}
        placeholder="Field placeholder text"
        role="button"
        tabIndex={0}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`<FormInput /> create form input item 1`] = `
<input
  className="fd-input"
  id="input-1"
  placeholder="Field placeholder text"
  type="text"
/>
`;
